Added Solutions to LeetCode Problems